deploy/k8s/overlays/staging/patch-ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abianzo-admin-ingress
spec:
  tls:
    - hosts:
        - admin.staging.abianzo.example.com
      secretName: staging-abianzo-admin-tls
  rules:
    - host: admin.staging.abianzo.example.com
