deploy/k8s/overlays/staging/patch-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abianzo-api-ingress
spec:
  tls:
    - hosts:
        - api.staging.abianzo.example.com
      secretName: staging-abianzo-api-tls
  rules:
    - host: api.staging.abianzo.example.com
