deploy/k8s/overlays/staging/patch-ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abianzo-webhook-ingress
spec:
  tls:
    - hosts:
        - hooks.staging.abianzo.example.com
      secretName: staging-abianzo-hooks-tls
  rules:
    - host: hooks.staging.abianzo.example.com
